# https-dns

./: .gitignore  Cargo.toml
benches/: cache.rs
src/: bootstrap.rs  cache.rs  cli.rs  lib.rs  local.rs  main.rs  upstream.rs  utils.rs
tests/: a_record.rs  aaaa_record.rs  txt_record.rs  util.rs
