[package]
name = "https-dns"
description = "Minimal and efficient DNS-over-HTTPS (DoH) client"
version = "0.3.0"
edition = "2021"
authors = ["Sherlock Holo <sherlockya at gmail.com>", "Xiaoyang Liu <siujoeng.lau@gmail.com>"]
readme = "README.md"
repository = "https://github.com/xiaoyang-sde/https-dns"
homepage = "https://github.com/xiaoyang-sde/https-dns"
documentation = "https://docs.rs/https-dns"
license = "MIT"
keywords = ["network", "udp", "cli", "dns"]
categories = ["network-programming", "web-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "io-util"] }
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
http = "0.2"
lru = "0.7"
trust-dns-proto = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
rand = "0.8"
anyhow = "1"
tap = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "cache"
harness = false
